--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseURL = "http://192.168.1.59/"
+languageCode = "es-e"
+title = "Notas de Kepair"
+theme="cortex"
